fixing header overlap

--- a/css/about.css
+++ b/css/about.css
@@ -31,3 +31,7 @@ img {
 	font-size: 20px;
 	padding-top: 0;
 }
+
+#header {
+	z-index: 9999;
+	margin-bottom:20px;}
